--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*FOR SMALL SCREENS*/
 
-@media screen and (min-width:200px) and (max-width:1000px) {
+@media screen and (min-width:70px) and (max-width:1000px) {
     body{
         display: grid;
         position: relative;
@@ -32,10 +32,33 @@
     }
 }
 
-@media screen and (min-width:1050px) and (max-width:2500px) {
+/*for desktop devices*/
+@media screen and (min-width:1000px) and (max-width:2500px) {
+    body{
+        background-color: #d5e1ef;
+    }
+   
+    div{
+       box-shadow: 10px 10px 5px  rgba(0, 0, 0, 0.1);
+        width: 260px;
+        padding: 10px;
+        border-radius: 20px;
+        display: grid;
+        align-items: center;
+        place-items: center;
+        position: absolute;
+        top: 50%;
+        left:50%;
+        transform: translate(-50% , -50%);
+        background-color: white;
+        text-align: center;
+    }
     img{
-        width:70%;
+        width:250px; 
         height: auto;
         border-radius: 50px;
+    }
+    h1{
+        font-size: large;
     }
 }
