--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*FOR SMALL SCREENS*/
 
-@media screen and (min-width:70px) and (max-width:1000px) {
+@media screen and (min-width:320px) and (max-width:1000px) {
     body{
         display: grid;
         position: relative;
@@ -15,15 +15,16 @@
     p{
         text-align: center;
     }
-    .container{
-        
+    .container{ 
+        left:20%;
         position: absolute;
         padding: 10px;
         border-radius:20px;
         width: 260px;
+        transform: translateY(30%);
         background-color: white;
         box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
-        transform: translate(45px,170px);
+        
     }
     img{
         border-radius:20px;
